--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,75 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.App {
+  text-align: center;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
 }
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+}
+
+.App-header {
+  background-color: blue;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.App-link {
+  color: #61dafb;
+}
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+button {
+  margin-left: 15px;
+}
+
+form {
+  margin: 15px;
+}
+
+label {
+  margin-right: 15px;
+}
+
+img {
+  width: 400px;
+  height: 350px;
+}
+
+header {
+  background-color: white;
+  padding: 80px;
+  justify-content: center;
+  text-align: center;
+}
+
+.submit {
+  margin-left: 130px;
+  padding: 10px;
+}
+
+.pizzaForm {
+  background-color: rgb(103, 122, 179);
+}
+
+.error {
+  color: rgb(247, 6, 6);
+} 
